# RatatouilleOS

./: .gitignore  INDEX.md  README.md  pyproject.toml
notebooks/: report.ipynb
src/ratatouille/: generators.py  main.py  models.py  plots.py
src/ratatouille/gui/: app_flet.py  app_pygame.py
src/ratatouille/schedulers/: fcfs.py  sjf.py
src/ratatouille/sim/: engine.py  metrics.py
