[tool.poetry]
name = "ratatouilleos"
version = "0.1.0"
description = "Simulação de escalonamento e sincronização: FCFS vs SJF, com/sem semáforo"
authors = ["Lucas <you@example.com>"]
readme = "README.md"
packages = [{ include = "ratatouille", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
pandas = "^2.2.0"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
seaborn = "^0.13.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.poetry.scripts]
ratatouille = "ratatouille.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true


